fix(ResourceList): alignment issue (#4713)

--- a/packages/components/src/ResourceList/Resource/Resource.module.scss
+++ b/packages/components/src/ResourceList/Resource/Resource.module.scss
@@ -34,6 +34,7 @@
 			color: $dove-gray;
 			margin: 0;
 		}
+
 		> .title {
 			font-weight: 600;
 		}
@@ -50,9 +51,11 @@
 			&.visible {
 				opacity: 1;
 			}
+
 			&[name='talend-star'] {
 				color: $lightning-yellow;
 			}
+
 			&[name='talend-badge'] {
 				color: $brand-primary;
 			}
@@ -66,6 +69,7 @@
 		:global(.tc-svg-icon) {
 			color: $brand-primary;
 		}
+
 		.flags-container {
 			opacity: 1;
 		}
@@ -102,12 +106,13 @@
 			text-overflow: ellipsis;
 			overflow: hidden;
 		}
+
 		dl {
 			padding-left: $padding-small;
 			margin-bottom: 0;
 
-			div:first-child {
-				margin-bottom: $padding-small;
+			> div {
+				margin-top: $padding-smaller;
 			}
 
 			div {
@@ -127,6 +132,7 @@
 				font-weight: initial;
 				flex-shrink: 0;
 
+				// stylelint-disable-next-line
 				&.icon-only {
 					margin-right: -1 * $padding-smaller;
 				}
